<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView4" android:text="@string/version" android:layout_x="140dip" android:layout_y="48dip"></TextView>
    <TextView android:layout_height="wrap_content" android:textSize="25sp" android:text="@string/title" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_x="41dip" android:layout_y="16dip"></TextView>
    <CheckBox android:layout_height="wrap_content" android:id="@+id/onstart" android:layout_width="wrap_content" android:text="@string/onstart" android:layout_x="6dip" android:layout_y="160dip"></CheckBox>
    <TextView android:layout_height="wrap_content" android:textSize="20sp" android:text="@string/sbc" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_x="9dip" android:layout_y="134dip"></TextView>
    <TextView android:layout_height="wrap_content" android:textSize="20sp" android:text="@string/sbcstate" android:id="@+id/sbcstate" android:layout_width="wrap_content" android:layout_x="180dip" android:layout_y="134dip"></TextView>
    <TextView android:layout_height="wrap_content" android:textSize="20sp" android:text="@string/sbctitle" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_x="116dip" android:layout_y="96dip"></TextView>
    <TextView android:layout_height="wrap_content" android:textSize="20sp" android:text="@string/othertitle" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_x="14dip" android:layout_y="270dip"></TextView>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="12dip" android:layout_y="302dip" android:id="@+id/szstats" android:text="@string/szstatsbuttonremove"></Button>
    <Button android:layout_height="wrap_content" android:text="@string/buttontext" android:id="@+id/sbctoggle" android:layout_width="wrap_content" android:layout_x="98dip" android:layout_y="213dip"></Button>

</AbsoluteLayout>
